1 Add overflow hidden to prevent link hover bug

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
   letter-spacing: -0.8vw;
   line-height: 0.8;
   margin: 0;
+  overflow: hidden;
   position: fixed;
   transform: translateY(10%);
   z-index: -1;
